# player-value-prediction

./: README.md  pyproject.toml
notebooks/: EDA.ipynb
reports/: report.html  report_all_columns.html
