[tool.poetry]
name = "player-value-prediction"
version = "0.1.0"
description = ""
authors = ["Yves Fracari <yves.fracari@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.7.1, <3.11"
pandas = "^1.3.4"
numpy = "^1.21.4"
plotly = "^5.4.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
