[tool.poetry]
name = "player-value-prediction"
version = "0.1.0"
description = ""
authors = ["Yves Fracari <yves.fracari@gmail.com>",
           "Mathias Dutra Nichele <mathiasdutranichele@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.7.1, <3.11"
pandas = "^1.3.4"
numpy = "^1.21.4"
plotly = "^5.4.0"
jupyter = "^1.0.0"
pandas-profiling = {url = "https://github.com/pandas-profiling/pandas-profiling/archive/master.zip"}
confuse = "^1.6.0"
tqdm = "^4.62.3"
visions = "^0.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
